--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,23 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testpass
+          POSTGRES_DB: testdb
+
+    env:
+      DB_NAME: testdb
+      DB_USER: testuser
+      DB_PASSWORD: testpass
+      TEST_DB_HOST: localhost
+      DB_PORT: 5432
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,9 +40,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
+
       - name: Set PYTHONPATH
         run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+
+      - name: Wait for psql
+        run: |
+          for i in {1..10}; do
+            pg_isready -h localhost -p 5432 -U testuser && break
+            sleep 2
+          done
 
       - name: Run unit tests
         run: pytest
